# chess_move_generator

./: CMakeLists.txt  bishop.cpp  bishop.hpp  bitboards.cpp  bitboards.hpp  board.cpp  board.h  json.hpp  king.cpp  king.hpp  knight.cpp  knight.hpp  main.cpp  move.cpp  move.hpp  node.cpp  node.h  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp  square_map.h  test.json  tests.yaml
